deploy: 00a42797ba91aa907af22a6976c4f225aebdf307

--- a/content/markdown/hybridization.html
+++ b/content/markdown/hybridization.html
@@ -378,7 +378,7 @@ document.write(`
         requestKernel: true,
         binderOptions: {
             repo: "brightway-lca/jupyter-book-brightway-documentation",
-            ref: "master",
+            ref: "main",
         },
         codeMirrorConfig: {
             theme: "abcdef",
