--- a/content/home.html
+++ b/content/home.html
@@ -358,7 +358,7 @@ It does not go in-depth into any particular topic - check out <a class="referenc
         requestKernel: true,
         binderOptions: {
             repo: "brightway-lca/jupyter-book-brightway-documentation",
-            ref: "master",
+            ref: "main",
         },
         codeMirrorConfig: {
             theme: "abcdef",
